Fix for BH-37.