@@ -28,8 +28,8 @@ package it.tidalwave.accounting.ui.jobeventexplorer.impl;
 
 import javax.annotation.Nonnull;
 import java.time.Duration;
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 import it.tidalwave.role.ui.Displayable;
 import it.tidalwave.dci.annotation.DciRole;
 import it.tidalwave.accounting.model.spi.TimedJobEventSpi;
@@ -46,7 +46,7 @@ import static it.tidalwave.util.Parameters.r;
 @DciRole(datumType = TimedJobEventSpi.class)
 public class TimedJobEventPresentable extends JobEventPresentable<TimedJobEventSpi>
   {
-    public TimedJobEventPresentable (final @Nonnull TimedJobEventSpi timedJobEvent)
+    public TimedJobEventPresentable (@Nonnull final TimedJobEventSpi timedJobEvent)
       {
         super(timedJobEvent);
       }
@@ -55,9 +55,9 @@ public class TimedJobEventPresentable extends JobEventPresentable<TimedJobEventS
     protected PresentationModelAggregate presentationModelAggregate ()
       {
         return super.presentationModelAggregate()
-                .withPmOf(DATE,        r(Displayable.of(DATETIME_FORMATTER.format(jobEvent.getStartDateTime()))))
-                .withPmOf(TIME,        r(Displayable.of(DURATION_FORMATTER::format, computeDuration()), RIGHT_ALIGNED))
-                .withPmOf(HOURLY_RATE, r(Displayable.of(MONEY_FORMATTER::format, jobEvent.getHourlyRate()), RIGHT_ALIGNED));
+            .withPmOf(DATE,        r(Displayable.of(DATETIME_FORMATTER.format(jobEvent.getStartDateTime()))))
+            .withPmOf(TIME,        r(Displayable.of(DURATION_FORMATTER::format, computeDuration()), RIGHT_ALIGNED))
+            .withPmOf(HOURLY_RATE, r(Displayable.of(MONEY_FORMATTER::format, jobEvent.getHourlyRate()), RIGHT_ALIGNED));
       }
 
     @Nonnull
@@ -69,6 +69,6 @@ public class TimedJobEventPresentable extends JobEventPresentable<TimedJobEventS
     @Override @Nonnull
     protected Collection<String> getStyles()
       {
-        return Arrays.asList("timed-job-event");
+        return List.of("timed-job-event");
       }
   }
